deployments/kustomize/hoppscotch/base/hoppscotch-backend/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoppscotch-backend
spec:
  selector:
    matchLabels:
      app: hoppscotch-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: hoppscotch-backend
    spec:
      containers:
        - name: hoppscotch-backend
          image: hoppscotch-backend
          ports:
            - containerPort: 3170
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "300m"
              memory: "768Mi"
          livenessProbe:
            tcpSocket:
              port: 3170
            initialDelaySeconds: 60
            periodSeconds: 10
