deployments/kustomize/hoppscotch/base/hoppscotch-backend/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-backend
spec:
  selector:
    app: hoppscotch-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
