deployments/kustomize/hoppscotch/base/hoppscotch-backend/gateway-backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-hoppscotch-backend
  namespace: hoppscotch
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: hoppscotch-backend-ingress-cert
      hosts:
        - $(HOPPSCOTCH_BACKEND_URL)
