deployments/kustomize/hoppscotch/base/hoppscotch-backend/virtualservice-backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-hoppscotch-backend
  namespace: hoppscotch
spec:
  hosts:
    - $(HOPPSCOTCH_BACKEND_URL)
  gateways:
    - gateway-hoppscotch-backend
  http:
    - route:
        - destination:
            host: hoppscotch-backend
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - exact: $(ADMIN_URL_FULL)
          - exact: $(BACKEND_URL_FULL)
          - exact: $(FRONTEND_URL_FULL)
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowCredentials: true
        allowHeaders:
          - "content-type"
